--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^7.1.3",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "rot-js": "^2.1.1"
   },
   "scripts": {
